tests/ui/const-generics/occurs-check/unused-substs-1.stderr
error[E0277]: the trait bound `A<_>: Bar<_>` is not satisfied
  --> $DIR/unused-substs-1.rs:12:13
   |
LL |     let _ = A;
   |             ^ the trait `Bar<_>` is not implemented for `A<_>`
   |
   = help: the trait `Bar<N>` is implemented for `A<7>`
note: required by a bound in `A`
  --> $DIR/unused-substs-1.rs:9:11
   |
LL | struct A<const N: usize>
   |        - required by a bound in this unit struct
LL | where
LL |     A<N>: Bar<N>;
   |           ^^^^^^ required by this bound in `A`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
